<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Activities Count -->
    <PreferenceCategory
        android:title="@string/settingsPref_category_title_appFunctions">

        <EditTextPreference
            android:inputType="number"
            android:key="@string/KEY_PREF_ACTIVITIES_COUNT"
            android:summary="2"
            android:title="@string/settingsPref_editText_title_recentActivities"/>

    </PreferenceCategory>

    <!-- Notifications -->
    <PreferenceCategory
        android:title="Notifications">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/KEY_PREF_RECEIVE_NOTIFICATIONS"
            android:summary="@string/settingsPref_checkbox_summary_notifications"
            android:title="@string/settingsPref_checkbox_title_notifications"/>
    </PreferenceCategory>

    <!--&lt;!&ndash; Location &ndash;&gt;-->
    <!--<PreferenceCategory-->
    <!--android:title="Locations">-->

    <!--<PreferenceScreen-->
    <!--android:key="about_location"-->
    <!--android:persistent="false"-->
    <!--android:title="Location Service">-->

    <!--<Preference-->
    <!--android:key="location_service"-->
    <!--android:summary="ATnT"-->
    <!--android:title="Location Service"/>-->

    <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->

    <!-- About-->
    <PreferenceCategory
        android:title="@string/settingsPref_category_title_about">

        <PreferenceScreen
            android:key="@string/KEY_PREF_ENABLE_LOCATION"
            android:persistent="false"
            android:title="@string/settingsPref_prefScreen_title_about">

            <Preference
                android:summary="ATnT"
                android:title="@string/settingsPref_pref_title_about"/>

        </PreferenceScreen>
    </PreferenceCategory>


    <!-- Legal-->
    <PreferenceCategory
        android:title="@string/settingsPref_category_title_legal">

        <!-- Privacy Policy -->
        <PreferenceScreen
            android:key="privacy_policy"
            android:persistent="false"
            android:title="@string/settingsPref_prefScreen_title_privacy">

            <Preference
                android:key="privacy_policy_content"
                android:summary="Copyright @ InvesTICKations"
                android:title="@string/settingsPref_pref_title_privacy"/>

        </PreferenceScreen>

        <!-- Terms of Use -->
        <PreferenceScreen
            android:key="terms_of_use"
            android:persistent="false"
            android:title="@string/settingsPref_pref_title_termsUse">

            <Preference
                android:key="terms_of_use_content"
                android:summary="Terms of Use InvesTICKations"
                android:title="@string/settingsPref_prefScreen_title_termsUse"/>

        </PreferenceScreen>
    </PreferenceCategory>

    <!-- Feedback -->
    <PreferenceCategory
        android:title="@string/settingsPref_category_title_feedback">

        <PreferenceScreen
            android:key="feedback_provide"
            android:persistent="false"
            android:title="@string/settingsPref_prefScreen_title_feedback">

            <Preference
                android:key="feedback_writeOff"
                android:summary="Write your feedback"
                android:title="@string/settingsPref_pref_title_feedback"/>

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>