<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.sfsu.investickation.ObservationMasterActivity">


    <item
        android:id="@+id/action_upload"
        android:icon="@mipmap/ic_cloud_upload_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_upload"
        app:showAsAction="collapseActionView|always"/>


    <item
        android:id="@+id/action_more"
        android:icon="@mipmap/ic_more_vert_white_24dp"
        android:orderInCategory="200"
        android:title="More"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_edit"
                android:icon="@mipmap/ic_mode_edit_white_24dp"
                android:orderInCategory="100"
                android:title="@string/action_edit"
                />
            <item
                android:id="@+id/action_delete"
                android:icon="@mipmap/ic_delete_white_24dp"
                android:orderInCategory="300"
                android:title="@string/action_delete"/>
        </menu>
    </item>

</menu>
