<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".fragments.LoginFragment">


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_large"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:layout_marginBottom="@dimen/view_dimen_large"
        android:layout_marginEnd="@dimen/view_dimen_large"
        android:layout_marginStart="@dimen/view_dimen_large"
        android:background="@color/colorWhite"
        android:elevation="@dimen/view_dimen_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/view_dimen_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/view_dimen_X2_large"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="@dimen/font_X3_large"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textEmail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textPassword"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/view_dimen_large"
                android:layout_marginTop="@dimen/view_dimen_large"
                android:background="@color/colorPrimary"
                android:text="@string/button_textLogin"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_medium"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
