<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_list_item_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_dimen_X_large"
        android:layout_marginBottom="@dimen/view_dimen_small"
        android:layout_marginTop="@dimen/view_dimen_small"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:id="@+id/container_dashboard_recent_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/view_dimen_small"
                android:layout_marginStart="@dimen/view_dimen_small"
                android:layout_marginTop="@dimen/view_dimen_small"
                android:text="@string/actListItem_name"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/font_medium"
                />

            <ImageView
                android:id="@+id/icon_recent_activities"
                android:layout_width="@dimen/view_dimen_medium"
                android:layout_height="@dimen/view_dimen_medium"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textview_activity_name"
                android:layout_marginStart="@dimen/view_dimen_small"
                android:layout_marginTop="@dimen/view_dimen_small"
                android:src="@mipmap/ic_today_black_24dp"/>

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_activity_name"
                android:layout_marginStart="@dimen/view_dimen_small"
                android:layout_marginTop="@dimen/view_dimen_small"
                android:layout_toEndOf="@id/icon_recent_activities"
                android:text="@string/actListItem_date"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/font_X1_small"
                />

            <TextView
                android:id="@+id/textview_static_click_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/textview_date"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/view_dimen_small"
                android:text="@string/actListItem_click"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/font_X1_small"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>